--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,11 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
+  timeout: 5000
+  username: <%= Rails.application.credentials.db_username! %>
+  password: <%= Rails.application.credentials.db_password! %>
+  database: rails_app
+  host: <%= Rails.application.credentials.db_host! %>
