--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: first
-  body: first body
+  title: 'first'
+  body: "first body"
 
 two:
-  title: second
-  body: second body
+  title: 'second'
+  body: "second body"
